# ai_pair_llm

./: .gitignore  CMakeLists.txt  README.md  inference.cpp  main.cpp  train_sp.py
attention/: attention_cpu.cpp  kv_cache.h
bench/: run_bench.cpp
benchmarks/: bench_flash_attn.cu
core/: ffn.h  transformer_block.h
engine/: engine_base.h
engine/mini_llm/: CMakeLists.txt  train_llm.cpp  vocab.txt
engine/mini_llm/include/: adam.h  tensor.h  tensor4d.h
engine/mini_llm/include/blocks/: transformer_block4d.h
engine/mini_llm/include/decode/: sampling4d.h
engine/mini_llm/include/layers/: attention4d.h  dropout4d.h  embedding4d.h  ffn4d.h  layernorm4d.h  linear4d.h  linear_vocab4d.h  swiglu4d.h
engine/mini_llm/include/loss/: cross_entropy.h  cross_entropy4d.h
engine/mini_llm/include/mask/: padding_mask4d.h
engine/mini_llm/include/model/: embedding.h  linear.h  mini_AI.h  transformer_stack4d.h
engine/mini_llm/include/optimizer/: adam.h
engine/mini_llm/src/: adam.cpp  infer.cpp  mini_llm.cpp  tensor4d.cpp  train.cpp
engine/mini_llm/src/blocks/: transformer_block4d.cpp
engine/mini_llm/src/decode/: sampling4d.cpp
engine/mini_llm/src/layers/: attention4d.cpp  dropout4d.cpp  embedding4d.cpp  ffn4d.cpp  layernorm4d.cpp  linear4d.cpp  linear_vocab4d.cpp  swiglu4d.cpp
engine/mini_llm/src/loss/: cross_entropy.cpp  cross_entropy4d.cpp  mse4d.cpp
engine/mini_llm/src/mask/: padding_mask4d.cpp
engine/mini_llm/src/model/: embedding.cpp  linear.cpp  mini_AI.cpp  transformer_stack4d.cpp
engine/mini_llm/src/optimizer/: adam.cpp
engine/mini_llm/src/world/: world_model.cpp
engine/mini_llm/tokenizer/: tokenizer.cpp  utf8.cpp
engine/mini_llm/train/: train_llm.cpp
engine/mini_llm/train_backup/: qa_train.txt  train_llm.cpp
experiments/: mini_llm_4d.cpp
fpga/: fsm_attention_v02.vhd  fsm_attention_v05.vhd  fsm_attention_v06.vhd  fsm_attention_v07.vhd  fsm_attention_v08.vhd  fsm_attention_v10.vhd  fsm_attention_v11.vhd  fsm_attention_v12.vhd  fsm_attention_v15.vhd
include/: kv_manager.h  llama_weights.h  world_model.h
legacy/monolithic_misc/base_project/: CMakeLists.txt
legacy/monolithic_misc/base_project/attention_fpga_graduation_edition/: CMakeLists.txt  main.cpp
legacy/monolithic_misc/base_project/attention_fpga_graduation_edition/cuda/: attention_decode_wmma.cu
legacy/monolithic_misc/base_project/attention_fpga_graduation_edition/fpga/: attention_decode_fsm.vhd
legacy/monolithic_misc/base_project/attention_fpga_graduation_edition/kv/: kv_cache.h
legacy/monolithic_misc/base_project/attention_fpga_graduation_edition/tests/: numerical_test.cpp
legacy/monolithic_misc/base_project/fpga_transformer_with_gemini/NanoGPT_Final_Collection/: README.txt
legacy/monolithic_misc/base_project/fpga_transformer_with_gemini/NanoGPT_Final_Collection/src/: tangnano9k.cst
legacy/monolithic_misc/base_project/fpga_transformer_with_gemini/NanoGPT_Final_Collection/src/level13_gpt/: fpga_gpt_top.sv
legacy/monolithic_misc/base_project/include/: cognitive_layer.h  gguf_parser.h  memory_arena.h  runtime_engine.h  weight_loader.h
legacy/monolithic_misc/base_project/src/: kv_cache.cu  memory_arena.cu  sentencepiece.cpp
logic_A_complete/: order_100.json
logic_cpp_full/: main.cpp  parser.cpp  problem.h  search.cpp  verifier.cpp
paper/: paper.md
results/: report.csv  report.json
rljf/: critic.md
runtime/: runtime_loop.cpp  runtime_loop.h
sample/: cpu_engine.cpp  mini_llm.cpp.bak  mini_llm.h.bak  world4d.h
src/: attention_cpu.cpp  cognitive_layer.cpp  critics.cpp  gpu_kernels.cu  kv_manager.cpp  main - コピー.cpp  main.cpp  mini_llm.cpp  runtime_engine.cu  sampler.cpp  world_model.cpp
tools/: generate_qa.cpp
training/: char_moe_fsm_train.cpp  loss_mask.cpp  ppp.cpp
(+151 files in other folders)
